RESOLVED FIXED47056
All the WebSocket tests crash
https://bugs.webkit.org/show_bug.cgi?id=47056
Summary All the WebSocket tests crash
Adam Barth
Reported 2010-10-03 01:34:56 PDT
All the WebSocket tests crash
Attachments
Patch (1.81 KB, patch)
2010-10-03 01:36 PDT, Adam Barth
no flags
Patch (1.48 KB, patch)
2010-10-03 01:58 PDT, Adam Barth
zecke: review+
Adam Barth
Comment 1 2010-10-03 01:36:04 PDT
Adam Barth
Comment 2 2010-10-03 01:58:03 PDT
Adam Barth
Comment 3 2010-10-03 02:00:45 PDT
Alexey Proskuryakov
Comment 4 2010-10-03 11:44:51 PDT
See comments in bug 47055 - this code looked correct. RS=me to roll out both changes, unless they magically fixed buildbots, in which case we'd have to investigate locally.
Note You need to log in before you can comment on or make changes to this bug.