2010-10-03  Adam Barth  <abarth@webkit.org>

Reviewed by Holger Freyther.

        All the WebSocket tests crash
        https://bugs.webkit.org/show_bug.cgi?id=47056

        More code that tries to hold onto temporaries with references.

        * websockets/WebSocketChannel.cpp:
        (WebCore::WebSocketChannel::didOpen):


Canonical link: https://commits.webkit.org/59596@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@68985 268f45cc-cd09-0410-ab3c-d52691b4dbfc