WebCore/websockets/WebSocketChannel.cpp
@@ -157,7 +157,7 @@ void WebSocketChannel::didOpen(SocketStreamHandle* handle)
     if (InspectorController* controller = m_context->inspectorController())
         controller->willSendWebSocketHandshakeRequest(identifier(), m_handshake.clientHandshakeRequest());
 #endif
-    const CString& handshakeMessage = m_handshake.clientHandshakeMessage();
+    CString handshakeMessage = m_handshake.clientHandshakeMessage();
     if (!handle->send(handshakeMessage.data(), handshakeMessage.length())) {
         m_context->addMessage(JSMessageSource, LogMessageType, ErrorMessageLevel, "Error sending handshake message.", 0, m_handshake.clientOrigin());
         handle->close();
